Added Nav bar and Bootstrap

--- a/tipout-app/src/index.css
+++ b/tipout-app/src/index.css
@@ -5,13 +5,17 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #ADD8E6;
+  background-color: 
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+}
+
+body{
+  background-color: #ADD8E6;
 }
 
 a {
